@@ -1,0 +1,73 @@
+<driver id="driver/c2esp">
+  <name>c2esp</name>
+  <url>http://cupsdriverkodak.sourceforge.net/</url>
+  <supplier>cupsdriverkodak project</supplier>
+  <thirdpartysupplied />
+  <license>GPL</license>
+  <supportcontacts>
+    <supportcontact url="http://sourceforge.net/projects/cupsdriverkodak/support" level="voluntary">cupsdriverkodak forums on SourceForge</supportcontact>
+  </supportcontacts>
+  <shortdescription>
+    <en>
+    Free software printer driver for the Kodak ESP inkjet printer series
+    </en>
+  </shortdescription>
+  <functionality>
+    <maxresx>600</maxresx>
+    <maxresy>1200</maxresy>
+    <color />
+    <text>100</text>
+    <lineart>100</lineart>
+    <graphics>70</graphics>
+    <photo>70</photo>
+  </functionality>
+  <execution>
+    <cups />
+  </execution>
+  <comments>
+    <en>
+
+    This is a cups filter and PPD files for the Kodak ESP 5xxx all-in-one 
+    printers on Linux. Likely to work on other ESP printers like the ESP 
+    3250, ESP 7, and ESP 9 as well.&lt;p&gt;
+
+    This driver supports only printing, not scanning or faxing.&lt;p&gt;
+
+    </en>
+  </comments>
+  <printers>
+    <printer>
+      <id>printer/Kodak-EasyShare_5100</id>
+    </printer>
+    <printer>
+      <id>printer/Kodak-EasyShare_5300</id>
+    </printer>
+    <printer>
+      <id>printer/Kodak-EasyShare_5500</id>
+    </printer>
+    <printer>
+      <id>printer/Kodak-ESP_3250</id>
+    </printer>
+    <printer>
+      <id>printer/Kodak-ESP_5250</id>
+    </printer>
+    <printer>
+      <id>printer/Kodak-ESP_5500</id>
+    </printer>
+    <printer>
+      <id>printer/Kodak-ESP_6150</id>
+    </printer>
+    <printer>
+      <id>printer/Kodak-ESP_7250</id>
+    </printer>
+    <printer>
+      <id>printer/Kodak-ESP_3</id>
+    </printer>
+    <printer>
+      <id>printer/Kodak-ESP_7</id>
+    </printer>
+    <printer>
+      <id>printer/Kodak-ESP_9</id>
+    </printer>
+  </printers>
+</driver>
