@@ -1,6 +1,6 @@
-<printer id="printer/Kodak-ESP_3250">
+<printer id="printer/Kodak-ESP_3">
   <make>Kodak</make>
-  <model>ESP 3250</model>
+  <model>ESP 3</model>
   <mechanism>
     <inkjet />
     <color />
