@@ -1,3 +1,15 @@
+2011-03-24  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/c2esp.xml, printer/Kodak-ESP_3.xml,
+	printer/Kodak-ESP_7.xml, printer/Kodak-ESP_9.xml,
+	printer/Kodak-ESP_3250.xml, printer/Kodak-ESP_5250.xml,
+	printer/Kodak-ESP_5500.xml, printer/Kodak-ESP_6150.xml,
+	printer/Kodak-ESP_7250.xml, printer/Kodak-EasyShare_5100.xml,
+	printer/Kodak-EasyShare_5300.xml,
+	printer/Kodak-EasyShare_5500.xml: Added new "c2esp" driver entry
+	for Kodak inkjet printers and some Kodak inkjets which possibly
+	work with this driver.
+
 2011-03-23  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/Ricoh-Aficio_SP_1000S.xml, printer/Ricoh-Aficio_SP_1100S.xml,
